added router and contact

--- a/src/components/About/style.css
+++ b/src/components/About/style.css
@@ -6,6 +6,8 @@
 
 .about {
     color: wheat;
+    font-size: 1.5rem;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     padding: 30px;
     background-color:#333333;
     /* width: 100%; */
