--- a/src/components/About/style.css
+++ b/src/components/About/style.css
@@ -1,7 +1,8 @@
 .profile {
     margin-left: 20px;
-    width: 300px;
-    height: 300px;
+    width: 350px;
+    height: 350px;
+    padding-bottom: 40px;
 }
 
 .about {
@@ -10,5 +11,4 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     padding: 30px;
     background-color:#333333;
-    /* width: 100%; */
 }
